# ded_dt_thermomechanical_solver

./: BOTSPO_Sampling (1).ipynb  pyproject.toml
examples/BOTSPO_Rep/: bo_checkpoint_iter_10.pt  bo_checkpoint_iter_11.pt  bo_checkpoint_iter_12.pt  bo_checkpoint_iter_2.pt  bo_checkpoint_iter_3.pt  bo_checkpoint_iter_4.pt  bo_checkpoint_iter_5.pt  bo_checkpoint_iter_6.pt  bo_checkpoint_iter_7.pt  bo_checkpoint_iter_8.pt  bo_checkpoint_iter_9.pt  bo_loop.py  debug.ipynb  debug.py  toolpath.crs
examples/ME 441/: analysis.ipynb  bo_checkpoint_iter_0.pt  bo_checkpoint_iter_10.pt  bo_checkpoint_iter_11.pt  bo_checkpoint_iter_12.pt  bo_checkpoint_iter_13.pt  bo_checkpoint_iter_14.pt  bo_checkpoint_iter_15.pt  bo_checkpoint_iter_16.pt  bo_checkpoint_iter_17.pt  bo_checkpoint_iter_18.pt  bo_checkpoint_iter_19.pt  bo_checkpoint_iter_2.pt  bo_checkpoint_iter_20.pt  bo_checkpoint_iter_21.pt  bo_checkpoint_iter_22.pt  bo_checkpoint_iter_23.pt  bo_checkpoint_iter_24.pt  bo_checkpoint_iter_25.pt  bo_checkpoint_iter_26.pt  bo_checkpoint_iter_27.pt  bo_checkpoint_iter_28.pt  bo_checkpoint_iter_29.pt  bo_checkpoint_iter_3.pt  bo_checkpoint_iter_30.pt  bo_checkpoint_iter_4.pt  bo_checkpoint_iter_5.pt  bo_checkpoint_iter_6.pt  bo_checkpoint_iter_7.pt  bo_checkpoint_iter_8.pt  bo_checkpoint_iter_9.pt  bo_loop.py  debug.ipynb  debug.py  laser_generator.py  thermomechanical.py  toolpath.crs
examples/PSED/: template.ipynb
examples/backup/: bo_checkpoint_iter_0.pt  bo_loop.py  debug.ipynb  laser_generator.py  toolpath.crs
notebook_backups/: BOTSPO_Sampling_chris.ipynb
(+19 files in other folders)
